--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -1,4 +1,6 @@
 <a name="1" id="1" target="_blank">&nbsp;</a> <span id="1">&nbsp;</span><table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/mthry289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/mthry289/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/mthry289/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/mthry289/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/mthry289/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/mthry289/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/mthry289/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/mthry289/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/mthry289/www/master/t/djy/12.jpg" title="捐款"></a></td></tr><tr><td colspan="2" VALIGN=TOP><p><a href="http://san4.hua.midnightchannel.net/hua/7" rel="nofollow">大纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/513" rel="nofollow">动态网</a> | <a href="https://git.io/fjHpv" rel="nofollow">神州</a> | <a href="http://san4.hua.midnightchannel.net/hua/8" rel="nofollow">退党</a> | <a href="https://git.io/fjHpU" rel="nofollow">九评</a> | <a href="https://git.io/fjHpT" rel="nofollow">网门</a> | <a href="http://san4.hua.midnightchannel.net/hua/4" rel="nofollow">神韵</a> | <a href="https://git.io/fjHpI" rel="nofollow">新纪元</a> | <a href="http://san4.hua.midnightchannel.net/hua/11" rel="nofollow">看中国</a> | <a href="http://san4.hua.midnightchannel.net/hua/3" rel="nofollow">明慧网</a> | <a href="https://git.io/fjHpq" rel="nofollow">明慧十方</a> | <a href="https://git.io/fj9lQ" rel="nofollow">明慧焦点</a> | <a href="http://san4.hua.midnightchannel.net/hua/9" rel="nofollow">希望之声</a> | <a href="https://git.io/fjHpY" rel="nofollow">漫谈党文化</a ></p><p><a href="http://san4.hua.midnightchannel.net/hua/5" rel="nofollow">新唐人</a> | <a href="https://git.io/JervF" rel="nofollow">亚太台</a> | <a href="https://git.io/fjHpG" rel="nofollow">直播</a> | <a href="https://git.io/fj9lp" rel="nofollow">传奇</a> | <a href="https://git.io/fj9lX" rel="nofollow">神话</a> | <a href="https://git.io/fjHpZ" rel="nofollow">人生</a> | <a href="https://git.io/fjFNJ" rel="nofollow">伪火</a > | <a href="https://git.io/fjHpc" rel="nofollow">真相片</a> | <a href="https://git.io/fj9lK" rel="nofollow">藏字石</a> | <a href="https://git.io/fj9l5" rel="nofollow">短视频</a> | <a href="https://git.io/fjHpW" rel="nofollow">告诉未来</a > | <a href="https://git.io/fjHpl" rel="nofollow">终级目的</a> | <a href="https://git.io/fj9lM" rel="nofollow">中共活摘</a > | <a href="https://git.io/fjHp4" rel="nofollow">风雨天地行</a></p></td></tr><tr><td width="707"><h3><p><strong>最新评论</strong></p></h3></td><td VALIGN=TOP rowspan=50><a href="https://git.io/fj9l0" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/gudianwu.jpg" title="神韵古典舞技巧表演" alt="神韵古典舞技巧表演"></a><br><a href="https://git.io/fj9la" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/9ping.jpg" title="九评共产党" alt="九评共产党"></a><br><a href="https://git.io/fj9lr" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/communism.jpg" title="共产主义终极目的" alt="共产主义终极目的"></a><br><a href="https://git.io/fjFNJ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/weihuo.jpg" title="中共的伪火骗局" alt="中共的伪火骗局"></a><br><a href="https://git.io/fj9lK" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/changzhi.jpg" title="古今奇观-藏字石" alt="古今奇观-藏字石"></a><br><a href="https://git.io/fj9lP" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/tianan.jpg" title="通往天安门的旅程" alt="通往天安门的旅程"></a><br><a href="https://git.io/fj9lX" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/weilai.jpg" title="未来人的神话" alt="未来人的神话"></a><br><a href="https://git.io/fj9l1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ji-zy.jpg" title="中共罪恶的活摘" alt="中共罪恶的活摘"></a><br><a href="https://git.io/fj9lM" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/huozhai.jpg" title="铁证如山" alt="铁证如山"></a><br><a href="https://git.io/fj9lD" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/4ke.jpg" title="一家四口死于中共暴政" alt="一家四口死于中共暴政"></a><br><a href="https://git.io/fj9ly" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/jie-di.jpg" title="─弟妹相继死于中共迫害" alt="─弟妹相继死于中共迫害"></a><br><a href="https://git.io/fj9lS" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ma-sj.jpg" title="她们许多已经被中共迫害至死" alt="她们许多已经被中共迫害至死"></a><br><a href="https://git.io/fj9l9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/shuan-cxl.jpg" title="双城血泪" alt="双城血泪"></a><br><a href="https://git.io/fj9lH" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/wu-zbh.jpg" title="震撼人心的无罪辩护" alt="震撼人心的无罪辩护"></a><br><a href="https://git.io/fj9lQ" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/6c10-720.jpg" title="从610到720" alt="从610到720"></a><br><a href="https://git.io/fj9l7" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/xian-z.jpg" title="中共官员的选择" alt="中共官员的选择"></a><br><a href="https://git.io/fj9l5" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/1400l.jpg" title="剖析1400例" alt="剖析1400例"></a><br><a href="https://git.io/fj9lb" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/425.jpg" title="万人上访真相" alt="万人上访真相"></a><br><a href="https://git.io/fj9lN" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/qing-h.jpg" title="被中共迫害的清华学子" alt="被中共迫害的清华学子"></a><br><a href="https://git.io/fj9lx" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/jian-z513.jpg" title="见证513" alt="见证513"></a><br><a href="https://git.io/fj9lp" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/gongfu.jpg" title="功夫 寻道" alt="功夫 寻道"></a><br><a href="https://git.io/fj9lh" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/guangguimian.jpg" title="歌唱家人生奇迹" alt="歌唱家人生奇迹"></a><br><a href="https://git.io/fj9lj" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ming-jjy.jpg" title="名校精英的选择" alt="名校精英的选择"></a><br><a href="https://git.io/fj98e" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/yin-lj.jpg" title="音乐之家的故事" alt="音乐之家的故事"></a><br><a href="https://git.io/fj98v" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ming-hsf.jpg" title="平凡中的不平凡" alt="平凡中的不平凡"></a><br><a href="https://github.com/mthry289/www/blob/master/README.md?dfh#9" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/huo-z3.jpg" title="警卫目击中共活摘"  alt="警卫目击中共活摘"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/liangan.jpg" title="海峡两岸的强烈反差"  alt="海峡两岸的强烈反差"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/mthry289/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/mthry289/www/blob/master/README.md?dfh#1" target="_blank"><img width="130" src="https://raw.githubusercontent.com/mthry289/djy/master/gb/130/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/17/n11800085.md#1" target="_blank">陆言：共产党离灭亡的终点还有多远？</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/17/n11800085.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/07/1907210227441528-150x120.jpg" align ="left"></a>在中国有这样一句话，叫做“跟不正，苗不正，接的葫芦歪歪腚”。这句话很有道理。共产党为什么这么邪，我们追踪它的起源就可以找到答案。共产党是一百多年前法国巴黎公社的一伙社会流氓造反，靠打砸抢起家的这样一伙人，这些人可以说是共产党的老祖宗，它有这样一个邪根，它的子孙后代能是好东西吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 4:26 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/14/n11793721.md#1" target="_blank">传记《穿透阴霾的舞蹈》读后感</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/14/n11793721.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2010/03/1003031031131371-150x120.jpg" align ="left"></a>加籍华人张铁钧是中国第一流的舞蹈家和舞蹈教育家，加拿大皇家芭蕾舞学院唯一华裔舞蹈教授；但是她的传记，却由一位加拿大人，作家和制片人Agnes Bristow 执笔，这是我从未见过的。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 3:47 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/17/n11799892.md#1" target="_blank">袁斌：吴花燕的不幸岂止于物质，更是精神上的</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/17/n11799892.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/f2416e0c35c13c5bed63693a9d7fbc01-600x400-1-150x120.jpg" align ="left"></a>2019年11月，贵州贫困女生吴花燕的故事被大陆媒体报导后，引发了舆论对其命运的关注；2020年1月13日，吴花燕因久病医治无效离世，再次引发了舆论对其命运的关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:48 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/17/n11799705.md#1" target="_blank">程晓农：美中经贸谈判的“临门一脚”与外国解读</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/17/n11799705.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/000_1NQ6KR-1-150x120.jpg" align ="left"></a>经过长达两年的反复谈判，美中两国的代表1月15日在经贸谈判第一阶段协议上签字。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:25 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/17/n11799285.md#1" target="_blank">乾元：重庆频频大火带给我们的启示</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/17/n11799285.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/FotoJet-1-600x400-1-150x120.jpg" align ="left"></a>重庆这个城市近年来难得消停，年终岁尾，又接连发生了两起震惊全国的火灾。第一起火灾发生在去年12月30日，一个高层住宅的12层住户起火，据称一家老小六口绝望的在里面呼叫了50分钟，最终全被活活烧死。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月17日 1:23 PM			</td></tr>
@@ -25,7 +27,6 @@
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11794756.md#1" target="_blank">夏小强：杀死闯进家中的暴徒是正当防卫吗？</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11794756.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/1920x1280_812421530952-600x400-1-150x120.jpg" align ="left"></a>那么，宋立英杀死闯入家中，是否属于防卫过当吗？他应该被判刑吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 4:58 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11794615.md#1" target="_blank">陈思敏：中美签署第一阶段贸协 中共2点惨败</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11794615.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1180494181-1-600x400-150x120.jpg" align ="left"></a>中美定于美东时间周三（15日）在白宫签署第一阶段贸易协议。14日，美国贸易代表莱特希泽（Robert Lighthizer）和财政部长姆钦（Steven Mnuchin）发表联合声明表示，美中双方并没有在第一阶段贸易协议同意进一步削减关税。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 4:30 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11794324.md#1" target="_blank">【名家专栏】教师须慎重处理有争议的问题</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11794324.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/Fotolia_34649832_Subscription_L-150x120.jpg" align ="left"></a>上个月，一位大温哥华高中（Metro Vancouver high school）的老师据称给学生们看了一部Netflix的纪录片，名为《别惹猫咪：追捕虐猫者》（Don't f*** With Cats，又名：猫不可杀不可辱）。这部被评为“成年”限制级的纪录片，生动地描述了已被判有罪的杀人犯卢卡·玛格诺塔（Luka M.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 4:00 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11794198.md#1" target="_blank">文武：国民党的前途与命运</a><br></h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11794198.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/8c1da188900d6613a9afa5f4e3e5fb62-600x400-1-150x120.jpg" align ="left"></a>国民党这次在台湾大选中的失败对国民党来说不是坏事而是好事，因为从党派利益的角度上来说，与中国共产党有仇的不是台湾的民进党而是中国国民党，这次在台湾大选的过程中，各党派在竟选造势的主会场上，国民党是举满了中华民国的国旗，国民党的中华民国万岁的口号喊遍全场。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/17/n11800044.md#1" target="_blank">伍新：无花言现花言形——小康年初哭吴花燕</a><br></h3>贵州穷女大三生，
 三七公斤三八龄。
 小康年刚苦熬到，
@@ -68,17 +69,5 @@
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11796267.md#1" target="_blank">夏林：中共新年挨的两记重拳</a><br></h3>中共从2019年起，明显走霉运。而2020年刚到，中共又意外地被重击两拳。左钩拳是美国政府斩首伊朗二号恐怖分子苏莱曼尼；右钩拳是台湾大选，对中共强硬的蔡英文大胜。
 
 去年12月30日发生了有伊朗恐怖分子苏莱曼尼参与策动的包围美国驻伊拉克使馆事件。美国政府迅速平息这一事件之后，目标锁定了在后面参与的伊朗重要人物苏莱曼.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月16日 5:06 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/20/1/15/n11794273.md#1" target="_blank">祝君安：妖共畜心剖</a><br></h3>保卫苏维埃，国难复独裁
-外蒙媚妖主，民国驱海台
-民主逐鹿去，专制伴谎来
-企主随伞降，右派应花开
-知青迷桃源，红楼斗开怀
-开放韬晦日，坦克辗栋材
-国资揽腰袋，民企割韭菜
-肠肥欲难填，贪眼觑世界
-王莽恭谦秀，得志便活摘
-保党吹和谐，愚民垄媒介
-娼盛德何在，梦杳珠光衰
-虎啸庙堂荒，鹅飞妖共哀......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月15日 1:26 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/mthry289/djy/blob/master/gb/news392.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news392_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/mthry289/djy/blob/master/gb/news392_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/mthry289/djy/blob/master/gb/news392_2.md#1<br><a href="https://github.com/mthry289/djy/blob/master/gb/news392_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/mthry289/djy/blob/master/gb/news392_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_2.htm">http://www.epochtimes.com/gb/news392_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
